# SSM-MetaRL-TestCompute

./: .gitignore  Dockerfile  README.md  demo.ipynb  funding.json  main.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  manual-build-trigger.yml  publish-docker.yml  publish-package.yml
adaptation/: __init__.py  test_adaptation.py  test_time_adaptation.py
checkpoints/: legacy_maml_CartPole-v1.pt  mamba_maml_CartPole-v1.pt  mamba_rl2_CartPole-v1.pt
core/: __init__.py  ssm.py  ssm_mamba.py  test_ssm.py
docs/agent_artifacts/: implementation_plan.md  task.md  walkthrough.md
env_runner/: __init__.py  environment.py
experiments/: README.md  benchmark_cmapss.py  benchmark_suite.py  benchmark_switching_lds.py  generate_proof.py  plot_results.py  quick_benchmark.py  serious_benchmark.py  test_mamba.py  visualize_results.py
meta_rl/: __init__.py  meta_maml.py  pearl.py  rl2.py  test_meta_rl.py  varibad.py
multi_agent/agents/: state_modeling_agent.py
multi_agent/tools/: ssm_tool.py
multi_agent/workflows/: research_workflow.py
results/: benchmark_20260220_135749.json  cmapss_benchmark.json  switching_lds_benchmark.json
tests/: test_adaptation.py  test_agents.py  test_mamba_ssm.py  test_meta_rl.py
